<?xml version="1.0"?>
<package>
  <name>draw_something</name>
  <version>0.0.1</version>
  <description>
    draw_something is a tool for drawing something on turtlesim
  </description>
  <maintainer email="apojomovsky@gmail.com">Alexis Pojomovsky</maintainer>
  <license>BSD</license>

  <author>Alexis Pojomovsky</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>


</package>
